feat: Update the tab separator style

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1039,6 +1039,7 @@ tab_bar_style separator
 #: this list.
 
 # tab_separator " ┇"
+tab_separator " |"
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
