feat: Idea vim add shortcut for close other tabs/left tabs/right tabs

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -21,9 +21,9 @@ Plug 'preservim/nerdtree'
 
 " Input method
 " IdeaVimExtension
-" set keep-english-in-normal-and-restore-in-insert
-" let context_aware=1
-set keep-english-in-normal
+set keep-english-in-normal-and-restore-in-insert
+let context_aware=1
+" set keep-english-in-normal
 
 " vim-multiple-cursors
 set multiple-cursors
@@ -90,6 +90,11 @@ map <leader>s <Action>(Stop)
 
 " View mode
 map <leader>z <Action>(ToggleZenMode)
+
+" Close other tabs
+map co <Action>(CloseAllEditorsButActive)
+map cl <Action>(CloseAllToTheRight)
+map ch <Action>(CloseAllToTheLeft)
 
 " Close project
 map Q <Action>(CloseProject)
