--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -92,7 +92,7 @@ map <leader>s <Action>(Stop)
 map <leader>z <Action>(ToggleZenMode)
 
 " Close all tabs
-map ca <Action>(CloseAllEditors)
+" map ca <Action>(CloseAllEditors)
 " Close other tabs
 map co <Action>(CloseAllEditorsButActive)
 " Close right tabs
