feat: Add vim shortcut for open tab in new window for idea

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -110,3 +110,6 @@ map gk <Action>(VcsShowPrevChangeMarker)
 
 " Move to opposite group
 map mo <Action>(MoveEditorToOppositeTabGroup)
+
+" Open tab in new window
+map W <Action>(EditSourceInNewWindow)
