--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -242,6 +242,14 @@
                 "$"
             ]
         },
+        {
+            "before": [
+                "s", "s"
+            ],
+            "commands": [
+                "workbench.explorer.fileView.focus"
+            ]
+        },
     ],
     "editor.lineHeight": 1.3,
     "files.autoSave": "onFocusChange"
