feat: Change kitty tab related settings

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1018,7 +1018,7 @@ tab_bar_style separator
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown.
@@ -1065,6 +1065,7 @@ tab_separator " |"
 #: a tab. A value of zero means that no limit is applied.
 
 # tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+tab_title_template "{index}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
