feat: Change kitty cursor color and remove unnecessary theme files

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2516,5 +2516,5 @@ tab_title_template "{index}"
 
 # BEGIN_KITTY_THEME
 # Tokyo Night Moon
-include current-theme.conf
+include theme-tokyo-night-moon.conf
 # END_KITTY_THEME
