--- a/kitty/theme-tokyo-night-moon.conf
+++ b/kitty/theme-tokyo-night-moon.conf
@@ -11,7 +11,8 @@ foreground #c8d3f5
 selection_background #2d3f76
 selection_foreground #c8d3f5
 url_color #4fd6be
-cursor #c8d3f5
+# cursor #c8d3f5
+cursor #00AAFF
 cursor_text_color #222436
 
 # Tabs
