feat: Use cmd + number to switch os windows in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2025,6 +2025,16 @@ tab_title_template "{index}"
 
 # map kitty_mod+n new_os_window
 # map cmd+n       new_os_window
+map cmd+1 nth_os_window 1
+map cmd+2 nth_os_window 2
+map cmd+3 nth_os_window 3
+map cmd+4 nth_os_window 4
+map cmd+5 nth_os_window 5
+map cmd+6 nth_os_window 6
+map cmd+7 nth_os_window 7
+map cmd+8 nth_os_window 8
+map cmd+9 nth_os_window 9
+map opt+p nth_os_window 2
 
 #::  Works like new_window above, except that it opens a top-level OS
 #::  window. In particular you can use new_os_window_with_cwd to open
