--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -14,7 +14,9 @@ keymap = [
 
 	# Hopping
 	{ on = "k", run = "arrow -1", desc = "Move cursor up" },
+	{ on = "<C-k>", run = "arrow -5", desc = "Move cursor up 5 lines" },
 	{ on = "j", run = "arrow 1",  desc = "Move cursor down" },
+	{ on = "<C-j>", run = "arrow 5",  desc = "Move cursor down 5 lines" },
 
 	{ on = "<Up>",    run = "arrow -1", desc = "Move cursor up" },
 	{ on = "<Down>",  run = "arrow 1",  desc = "Move cursor down" },
