feat: Change kitty tab title

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -987,6 +987,7 @@ tab_bar_edge top
 #: contents of the current tab.
 
 # tab_bar_style fade
+# tab_bar_style powerline
 tab_bar_style separator
 
 #: The tab bar style, can be one of:
@@ -1065,7 +1066,7 @@ tab_separator " |"
 #: a tab. A value of zero means that no limit is applied.
 
 # tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
-tab_title_template "{index}"
+tab_title_template "🍓{index}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -2035,6 +2036,7 @@ map cmd+7 nth_os_window 7
 map cmd+8 nth_os_window 8
 map cmd+9 nth_os_window 9
 map opt+p nth_os_window 2
+map opt+f nth_os_window 3
 
 #::  Works like new_window above, except that it opens a top-level OS
 #::  window. In particular you can use new_os_window_with_cwd to open
