--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -3,7 +3,8 @@
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
 [manager]
-ratio          = [ 1, 4, 3 ]
+# ratio          = [ 1, 4, 3 ]
+ratio          = [ 0, 1, 1 ]
 sort_by        = "alphabetical"
 sort_sensitive = false
 sort_reverse 	 = false
