feat: Close input by once Esc press
See: https://yazi-rs.github.io/docs/tips#close-input-by-esc

--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -355,3 +355,8 @@ keymap = [
 	# Filtering
 	{ on = "f", run = "filter", desc = "Apply a filter for the help items" },
 ]
+
+[[input.prepend_keymap]]
+on   = "<Esc>"
+run  = "close"
+desc = "Cancel input"
