--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1066,7 +1066,7 @@ tab_separator " |"
 #: a tab. A value of zero means that no limit is applied.
 
 # tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
-tab_title_template "🍓{index}"
+tab_title_template "🍓{index}-{title}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
