feat: Change the kitty inactive tab foreground

--- a/kitty/theme-tokyo-night-moon.conf
+++ b/kitty/theme-tokyo-night-moon.conf
@@ -19,7 +19,7 @@ cursor_text_color #222436
 active_tab_background #82aaff
 active_tab_foreground #1e2030
 inactive_tab_background #2f334d
-inactive_tab_foreground #545c7e
+inactive_tab_foreground #82aaff
 #tab_bar_background #1b1d2b
 
 # Windows
