--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1995,6 +1995,7 @@ macos_show_window_title_in none
 
 # map kitty_mod+enter new_window
 # map cmd+enter       new_window
+map cmd+enter       new_window_with_cwd
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
