feat: Add the move tab keymap for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2171,10 +2171,12 @@ map cmd+enter       new_window_with_cwd
 #: Move tab forward
 
 # map kitty_mod+. move_tab_forward
+map cmd+shift+. move_tab_forward
 
 #: Move tab backward
 
 # map kitty_mod+, move_tab_backward
+map cmd+shift+, move_tab_backward
 
 #: Set tab title
 
