--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -800,6 +800,7 @@ font_size 16.0
 #: as number of cells instead of pixels.
 
 # enabled_layouts *
+enabled_layouts grid,horizontal,vertical
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -1476,6 +1477,7 @@ tab_title_template "🍓{index}-{title}"
 #: the config is not supported.
 
 # startup_session none
+startup_session workspace.conf
 
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session =none command line option
