--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -817,6 +817,7 @@ enabled_layouts grid,horizontal,vertical
 #: resizing, and the lines value is used for vertical resizing.
 
 # window_border_width 0.5pt
+window_border_width 1pt
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
