feat: Update the kitty workspace

--- a/kitty/workspace.conf
+++ b/kitty/workspace.conf
@@ -13,9 +13,9 @@ cd /Users/jing/Code/GitLab/A6/iov-foundation-api
 launch zsh
 cd /Users/jing/Code/GitLab/A6/iov-foundation/abupdate-model-core-spring-boot-starter
 launch zsh
-cd /Users/jing/Code/GitLab/A6/iov-foundation/iov-model-design
-launch zsh
 cd /Users/jing/Code/GitLab/A6/iov-foundation/iov-model-design-api
+launch zsh
+cd /Users/jing/Code/GitLab/A6/iov-foundation/iov-model-design
 launch zsh
 cd /Users/jing/Code/GitLab/A6/iov-foundation/model-design-common
 launch zsh
@@ -29,6 +29,6 @@ new_tab HTTP
 cd /Users/jing/Code/GitHub/http
 launch zsh
 
-new_tab File
+new_tab Down
 cd /Users/jing/Downloads/
 launch zsh
