feat: Update the window related keymap for kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2063,10 +2063,17 @@ map cmd+enter       new_window_with_cwd
 #: Move window forward
 
 # map kitty_mod+f move_window_forward
+map ctrl+shift+. move_window_forward
 
 #: Move window backward
 
 # map kitty_mod+b move_window_backward
+map ctrl+shift+, move_window_backward
+
+# moves the window into a new tab
+map ctrl+= detach_window new-tab
+# moves the window into the previously active tab
+map ctrl+- detach_window tab-prev
 
 #: Move window to top
 
