feat: Hide the kitty window decoration and move tab tab from top to bottom

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -891,6 +891,7 @@ window_border_width 1pt
 #: between zero and one, with zero being fully faded).
 
 # hide_window_decorations no
+hide_window_decorations yes
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -972,8 +973,8 @@ window_border_width 1pt
 
 #: Tab bar {{{
 
-# tab_bar_edge bottom
-tab_bar_edge top
+tab_bar_edge bottom
+# tab_bar_edge top
 
 #: The edge to show the tab bar on, top or bottom.
 
