--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1045,7 +1045,7 @@ tab_bar_min_tabs 1
 #: this list.
 
 # tab_separator " ┇"
-tab_separator " |"
+tab_separator " ┃ "
 
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
@@ -1069,7 +1069,7 @@ tab_separator " |"
 #: a tab. A value of zero means that no limit is applied.
 
 # tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
-tab_title_template "🍓{index}-{title}"
+tab_title_template "🍓{index}.{title}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
