fix: 修复 Ideavim Visual 到 Change 速度慢问题

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -107,11 +107,11 @@ map <leader>z <Action>(ToggleZenMode)
 " Close all tabs
 " map ca <Action>(CloseAllEditors)
 " Close other tabs
-map co <Action>(CloseAllEditorsButActive)
+nmap co <Action>(CloseAllEditorsButActive)
 " Close right tabs
-map cl <Action>(CloseAllToTheRight)
+nmap cl <Action>(CloseAllToTheRight)
 " Close left tabs
-map ch <Action>(CloseAllToTheLeft)
+nmap ch <Action>(CloseAllToTheLeft)
 
 " Close project
 map Q <Action>(CloseProject)
