feat: Ideavim use gI jump to implementation(gi default will jump to the last insert location)

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -75,7 +75,7 @@ map <leader>e <Action>(ShowErrorDescription)
 map <leader>a <Action>(Annotate)
 " File outline
 map <leader>o <Action>(FileStructurePopup)
-map gi <Action>(GotoImplementation)
+map gI <Action>(GotoImplementation)
 map gd <Action>(GotoDeclaration)
 map gu <Action>(GotoSuperMethod)
 
