--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -38,8 +38,8 @@ let context_aware=1
 set multiple-cursors
 nmap <C-n> <Plug>NextWholeOccurrence
 xmap <C-n> <Plug>NextWholeOccurrence
-" nmap <C-a> <Plug>AllWholeOccurrences
-" xmap <C-a> <Plug>AllWholeOccurrences
+nmap <leader><C-n> <Plug>AllOccurrences
+xmap <leader><C-n> <Plug>AllOccurrences
 nmap <C-s> <Plug>SkipOccurrence
 xmap <C-s> <Plug>SkipOccurrence
 nmap <C-p> <Plug>RemoveOccurrence
