feat: Add Command + Shift + , or . to mvoe tab left or right
Equals to th or tl

See Also: https://stackoverflow.com/questions/53174725/ideavim-make-cmd-a-macos-select-all-text-in-visual-mode

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -6,7 +6,9 @@ source ~/.vimrc
 set clipboard+=ideaput,unnamed
 
 " Tab switch
+" Equal to Command + Shift + [
 nnoremap E gT
+" Equal to Command + Shift + ]
 nnoremap R gt
 nnoremap W 1gt
 " nnoremap T $gt
@@ -14,10 +16,14 @@ nnoremap T 1gtgT
 " Tab move
 " Move current tab to left
 nmap th :tabm-1 <CR>
+" Command + Shift + ,
+nmap <D-S-,> :tabm-1 <CR>
 " Move current tab to far left
 nmap tH :tabm 0 <CR>
 " Move current tab to right
 nmap tl :tabm+1 <CR>
+" Command + Shift + .
+nmap <D-S-.> :tabm+1 <CR>
 " Move current tab to far right
 nmap tL :tabm $<CR>
 
