--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -799,8 +799,8 @@ font_size 18.0
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
-enabled_layouts grid,horizontal,vertical
+enabled_layouts *
+# enabled_layouts grid,horizontal,vertical
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -2056,25 +2056,27 @@ map cmd+enter       new_window_with_cwd
 #: Next window
 
 # map kitty_mod+] next_window
+map cmd+shift+] next_window
 
 #: Previous window
 
 # map kitty_mod+[ previous_window
+map cmd+shift+[ previous_window
 
 #: Move window forward
 
 # map kitty_mod+f move_window_forward
-map ctrl+shift+. move_window_forward
+map cmd+shift+. move_window_forward
 
 #: Move window backward
 
 # map kitty_mod+b move_window_backward
-map ctrl+shift+, move_window_backward
+map cmd+shift+, move_window_backward
 
 # moves the window into a new tab
-map ctrl+= detach_window new-tab
+# map cmd+= detach_window new-tab
 # moves the window into the previously active tab
-map ctrl+- detach_window tab-prev
+# map cmd+- detach_window tab-prev
 
 #: Move window to top
 
@@ -2159,12 +2161,14 @@ map ctrl+- detach_window tab-prev
 # map kitty_mod+right next_tab
 # map shift+cmd+]     next_tab
 # map ctrl+tab        next_tab
+map ctrl+shift+]        next_tab
 
 #: Previous tab
 
 # map kitty_mod+left previous_tab
 # map shift+cmd+[    previous_tab
 # map ctrl+shift+tab previous_tab
+map ctrl+shift+[      previous_tab
 
 #: New tab
 
@@ -2183,12 +2187,12 @@ map ctrl+- detach_window tab-prev
 #: Move tab forward
 
 # map kitty_mod+. move_tab_forward
-map cmd+shift+. move_tab_forward
+map ctrl+shift+. move_tab_forward
 
 #: Move tab backward
 
 # map kitty_mod+, move_tab_backward
-map cmd+shift+, move_tab_backward
+map ctrl+shift+, move_tab_backward
 
 #: Set tab title
 
@@ -2232,9 +2236,12 @@ map cmd+0 goto_tab 10
 
 #:     map ctrl+alt+t goto_layout tall
 #:     map ctrl+alt+s goto_layout stack
-map ctrl+alt+t goto_layout tall
-map ctrl+alt+s goto_layout stack
-map ctrl+alt+g goto_layout grid
+map cmd+shift+= goto_layout stack
+map cmd+shift+- goto_layout grid
+map cmd+shift+t goto_layout tall
+map cmd+shift+g goto_layout grid
+map cmd+shift+- goto_layout vertical
+map cmd+shift+\ goto_layout horizontal
 
 #: Similarly, to switch back to the previous layout::
 
