--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -4,7 +4,8 @@
 
 [manager]
 # ratio          = [ 1, 4, 3 ]
-ratio          = [ 0, 1, 1 ]
+# ratio          = [ 0, 1, 1 ]
+ratio          = [ 1, 4, 4 ]
 sort_by        = "alphabetical"
 sort_sensitive = false
 sort_reverse 	 = false
