--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -57,3 +57,9 @@ style = 'bold #82AAFF'
 
 [cmd_duration]
 format = '[$duration]($style) '
+
+[hostname]
+disabled = true
+
+[username]
+disabled = true
