feat: Disable kitty some keys bombine

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2565,3 +2565,5 @@ map cmd+shift+\ goto_layout horizontal
 # Tokyo Night Moon
 include theme-tokyo-night-moon.conf
 # END_KITTY_THEME
+#
+map cmd+shift+2 discard_event
