feat: Add search files and find in files keymap in ideavim

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -145,3 +145,9 @@ map sr <Action>(ChangeSplitOrientation)
 
 " Format
 map <leader>cf <Action>(ReformatCode)
+
+" Search files
+map <leader><leader> <Action>(GotoFile)
+
+" Find in files
+map <leader>/ <Action>(FindInPath)
