feat: Add code action keymap in ideavim

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -151,3 +151,6 @@ map <leader><leader> <Action>(GotoFile)
 
 " Find in files
 map <leader>/ <Action>(FindInPath)
+
+" Code action
+map <leader>ca <Action>(ShowIntentionActions)
