feat: Type text in all kitty windows simultaneously

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2567,3 +2567,5 @@ include theme-tokyo-night-moon.conf
 # END_KITTY_THEME
 #
 map cmd+shift+2 discard_event
+
+map f1 launch --allow-remote-control kitty +kitten broadcast --match-tab state:focused
