feat: Add ssh login shortcut in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2569,3 +2569,4 @@ include theme-tokyo-night-moon.conf
 map cmd+shift+2 discard_event
 
 map f1 launch --allow-remote-control kitty +kitten broadcast --match-tab state:focused
+map f2 send_text all ssh root@a6\x0d
