--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -19,6 +19,7 @@ tab_title_template "🍓{index}.{title}"
 #: tab
 map cmd+t        new_tab
 map cmd+w        close_tab
+map shift+cmd+i  set_tab_title
 map ctrl+shift+] next_tab
 map ctrl+shift+[ previous_tab
 map ctrl+shift+. move_tab_forward
@@ -36,7 +37,7 @@ map cmd+0        goto_tab               10
 map cmd+p        goto_tab               -1
 #: window
 map cmd+enter   new_window_with_cwd
-# map cmd+n       new_os_window
+map cmd+n       new_os_window
 map cmd+shift+] next_window
 map cmd+shift+[ previous_window
 map cmd+shift+. move_window_forward
@@ -48,6 +49,7 @@ map cmd+shift+f goto_layout   fat
 map cmd+shift+g goto_layout   grid
 map cmd+shift+- goto_layout   vertical
 map cmd+shift+\ goto_layout   horizontal
+map cmd+shift+l next_layout
 # map cmd+shift+s goto_layout   splits
 #: resizing window
 map cmd+r start_resizing_window
@@ -56,13 +58,14 @@ map cmd+shift+2 discard_event
 #: broadcast
 map f1 launch --allow-remote-control kitty +kitten broadcast --match-tab state:focused
 #: ssh login
-map f2 send_text all ssh root@ubuntu\x0d
+map f2 send_text all ssh ubuntu\x0d
+map f3 send_text all ssh a6\x0d
 #: reload config file
 map ctrl+cmd+, load_config_file
 
 #: cursor animation
-# cursor_trail 1
-# cursor_trail_decay 0.1 0.2
+# cursor_trail 3
+# cursor_trail_decay 0.1 0.4
 # cursor_trail_start_threshold 2
 
 #: theme
