feat: Add ssh share_connections in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,9 @@
 #: font
 font_size 18.0
 
+#: cursor
+cursor_shape block
+
 #: layout
 enabled_layouts *
 
@@ -73,6 +76,9 @@ include theme-tokyo-night-moon.conf
 
 #: workspace
 startup_session workspace.conf
+
+#: ssh
+share_connections yes
 
 #: quit
 macos_quit_when_last_window_closed yes
