feat: Update enabled_layouts in kiitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -5,7 +5,7 @@ font_size 18.0
 cursor_shape block
 
 #: layout
-enabled_layouts *
+enabled_layouts stack,tall,fat,grid,vertical,horizontal
 
 #: window
 window_border_width       1pt
@@ -17,6 +17,7 @@ tab_bar_style      separator
 tab_bar_min_tabs   1
 tab_separator      " ┃ "
 tab_title_template "🍓{index}.{title}"
+# tab_title_template "🍓{index}.{title}.{layout_name.upper()}"
 
 #: keymaps
 #: tab
