feat: Add some keys to resizing windows in kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,7 @@ tab_title_template "🍓{index}.{title}"
 #: tab
 map cmd+t        new_tab
 map cmd+w        close_tab
-map shift+cmd+i  set_tab_title
+map cmd+shift+i  set_tab_title
 map ctrl+shift+] next_tab
 map ctrl+shift+[ previous_tab
 map ctrl+shift+. move_tab_forward
@@ -57,6 +57,11 @@ map cmd+shift+l next_layout
 # map cmd+shift+s goto_layout   splits
 #: resizing window
 map cmd+r start_resizing_window
+map ctrl+opt+w resize_window wider
+map ctrl+opt+n resize_window narrower
+map ctrl+opt+t resize_window taller
+map ctrl+opt+s resize_window shorter
+map ctrl+opt+r resize_window reset
 #: Disable keymaps
 map cmd+shift+2 discard_event
 #: broadcast
