--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -103,6 +103,24 @@ map ml <Action>(ShowBookmarks)
 map me <Action>(GotoNextBookmark)
 map mb <Action>(GotoPreviousBookmark)
 map mm <Action>(ToggleBookmark)
+map m0 <Action>(ToggleBookmark0)
+map m1 <Action>(ToggleBookmark1)
+map m2 <Action>(ToggleBookmark2)
+map m3 <Action>(ToggleBookmark3)
+map m4 <Action>(ToggleBookmark4)
+map m5 <Action>(ToggleBookmark5)
+map m6 <Action>(ToggleBookmark6)
+map m7 <Action>(ToggleBookmark7)
+map m8 <Action>(ToggleBookmark8)
+map m9 <Action>(ToggleBookmark9)
+map ma <Action>(ToggleBookmarkA)
+map mb <Action>(ToggleBookmarkB)
+map mc <Action>(ToggleBookmarkC)
+map md <Action>(ToggleBookmarkD)
+map me <Action>(ToggleBookmarkE)
+map mf <Action>(ToggleBookmarkF)
+map mg <Action>(ToggleBookmarkG)
+map mh <Action>(ToggleBookmarkH)
 
 " Debug
 map <leader>d <Action>(ChooseDebugConfiguration)
