--- a/cursor/settings.json
+++ b/cursor/settings.json
@@ -67,7 +67,7 @@
     "editor.fontWeight": "normal",
     "vim.vimrc.path": "$HOME/.vimrc",
     "vim.vimrc.enable": true,
-    "workbench.colorTheme": "One Dark Pro",
+    "workbench.colorTheme": "Default Dark+",
     "vim.highlightedyank.enable": true,
     "vim.visualModeKeyBindingsNonRecursive": [],
     "vim.digraphs": {},
@@ -77,7 +77,7 @@
     "vim.leader": "<space>",
     "vim.useSystemClipboard": true,
     "vim.smartRelativeLine": true,
-    "vim.normalModeKeyBindings": [
+    "vscode-neovim.afterInitConfig": [
         {
             "before": [
                 "s",
@@ -264,13 +264,22 @@
                 "workbench.action.closeWindow"
             ]
         },
+        {
+            "before": [
+                "<C-/>"
+            ],
+            "commands": [
+                "editor.action.commentLine"
+            ]
+        },
     ],
     "editor.lineHeight": 1.3,
     "files.autoSave": "onFocusChange",
-    "workbench.statusBar.visible": false,
     "workbench.iconTheme": "material-icon-theme",
     "breadcrumbs.enabled": false,
     "explorer.confirmPasteNative": false,
     "oneDarkPro.editorTheme": "VS Code",
-    "terminal.integrated.fontFamily": "MesloLGS NF"
+    "terminal.integrated.fontFamily": "MesloLGS NF",
+    "vim.autoSwitchInputMethod.enable": true,
+    "workbench.statusBar.visible": false
 }
