feat: Enable kitty cursor animation

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -66,15 +66,12 @@ map ctrl+opt+r resize_window reset
 map cmd+shift+2 discard_event
 #: broadcast
 map f1 launch --allow-remote-control kitty +kitten broadcast --match-tab state:focused
-#: ssh login
-map f2 send_text all ssh ubuntu\x0d
-map f3 send_text all ssh a6\x0d
 #: reload config file
 map ctrl+cmd+, load_config_file
 
 #: cursor animation
-# cursor_trail 3
-# cursor_trail_decay 0.1 0.4
+cursor_trail 3
+cursor_trail_decay 0.1 0.4
 # cursor_trail_start_threshold 2
 
 #: theme
