feat: Use \l to add newline, use \r as replace in Idea

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -168,6 +168,9 @@ map <leader><leader> <Action>(GotoFile)
 " Find in files
 map <leader>/ <Action>(FindInPath)
 
+" Replace
+map \r <Action>(ReplaceInPath)
+
 " Code action
 map <leader>ca <Action>(ShowIntentionActions)
 
